force-app/main/default/objects/Customer_Journey__c/Customer_Journey__c.object-meta.xml
<CustomObject>
    <description>Master object for customer journeys in the omnichannel attribution platform. Contains journey metadata and identity resolution results.</description>
    <label>Customer Journey</label>
    <nameField>
        <displayFormat>Journey-{00000000}</displayFormat>
        <label>Journey Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Journeys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>