force-app/main/default/objects/Customer_Journey__c/fields/Confidence_Level__c.field-meta.xml
<CustomField>
    <fullName>Confidence_Level__c</fullName>
    <description>Categorical confidence level for identity resolution</description>
    <inlineHelpText>High (&gt;80%), Medium (60-80%), Low (40-60%), Unmatched (&lt;40%)</inlineHelpText>
    <label>Confidence Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
                <default>true</default>
                <label>Medium</label>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Unmatched</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>