force-app/main/default/objects/Customer_Journey__c/fields/Confidence_Score__c.field-meta.xml
<CustomField>
    <fullName>Confidence_Score__c</fullName>
    <description>Identity resolution confidence score (0-1) indicating certainty of customer matching</description>
    <inlineHelpText>Confidence level in customer identity resolution from 0 (no confidence) to 1 (perfect confidence).</inlineHelpText>
    <label>Confidence Score</label>
    <precision>5</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>