force-app/main/default/objects/Customer_Journey__c/fields/Conversion_Value__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Value__c</fullName>
    <description>Total monetary value of conversions in this journey (EUR)</description>
    <inlineHelpText>Sum of all conversion values from touchpoints in this journey, expressed in Euros.</inlineHelpText>
    <label>Conversion Value</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>