force-app/main/default/objects/Customer_Journey__c/fields/Converted__c.field-meta.xml
<CustomField>
    <fullName>Converted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this customer journey resulted in a conversion</description>
    <inlineHelpText>True if any touchpoint in this journey had a conversion value greater than zero.</inlineHelpText>
    <label>Converted</label>
    <type>Checkbox</type>
</CustomField>