force-app/main/default/objects/Customer_Journey__c/fields/Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_ID__c</fullName>
    <description>External customer identifier resolved through identity resolution hierarchy</description>
    <externalId>true</externalId>
    <inlineHelpText>Customer identifier generated by identity resolution engine. Links journeys to specific customers across channels.</inlineHelpText>
    <label>Customer ID</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>