force-app/main/default/objects/Customer_Journey__c/fields/Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type__c</fullName>
    <description>Classification of customer as B2B or B2C based on journey characteristics and touchpoint evidence</description>
    <inlineHelpText>Automatically determined by Journey Assembler based on channels used, timing patterns, and behavioral signals.</inlineHelpText>
    <label>Customer Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B2C</fullName>
                <default>true</default>
                <label>B2C</label>
            </value>
            <value>
                <fullName>B2B</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>