force-app/main/default/objects/Customer_Journey__c/fields/Journey_Duration_Days__c.field-meta.xml
<CustomField>
    <fullName>Journey_Duration_Days__c</fullName>
    <description>Calculated duration of the customer journey in days</description>
    <formula>Journey_End_Date__c - Journey_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Automatically calculated as the difference between journey end and start dates.</inlineHelpText>
    <label>Journey Duration (Days)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>