force-app/main/default/objects/Customer_Journey__c/fields/Journey_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Journey_End_Date__c</fullName>
    <description>Timestamp of the last touchpoint in the customer journey</description>
    <inlineHelpText>Date and time of the final touchpoint in this journey segment.</inlineHelpText>
    <label>Journey End Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>