force-app/main/default/objects/Customer_Journey__c/fields/Journey_ID__c.field-meta.xml
<CustomField>
    <fullName>Journey_ID__c</fullName>
    <description>External ID from Journey Assembler API for unique journey identification and integration</description>
    <externalId>true</externalId>
    <inlineHelpText>Unique identifier generated by the Journey Assembler API. Used for data integration and preventing duplicates.</inlineHelpText>
    <label>Journey ID</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>