force-app/main/default/objects/Customer_Journey__c/fields/Journey_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Journey_Start_Date__c</fullName>
    <description>Timestamp of the first touchpoint in the customer journey</description>
    <inlineHelpText>Date and time when the customer journey began with the first recorded touchpoint.</inlineHelpText>
    <label>Journey Start Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>