force-app/main/default/objects/Customer_Journey__c/fields/Processing_Status__c.field-meta.xml
<CustomField>
    <fullName>Processing_Status__c</fullName>
    <description>Current processing status of the customer journey</description>
    <inlineHelpText>Tracks the state of journey processing through the attribution pipeline.</inlineHelpText>
    <label>Processing Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>