force-app/main/default/objects/Customer_Journey__c/fields/Total_Touchpoints__c.field-meta.xml
<CustomField>
    <fullName>Total_Touchpoints__c</fullName>
    <description>Count of touchpoints in this customer journey</description>
    <inlineHelpText>Number of individual touchpoints that make up this customer journey.</inlineHelpText>
    <label>Total Touchpoints</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>